# llm-tool-use-ft

./: .gitignore  1-gen_queries.ipynb  2-gen_traces.ipynb  4-finetune_model.ipynb  5-eval_model.ipynb  LICENSE  README.md  data_viewer.py  pyproject.toml  requirements.txt  trace_viewer.py
.ipynb_checkpoints/: 1-gen_queries-checkpoint.ipynb  3-data_prep-checkpoint.ipynb
data/: eval_results.csv  eval_summary.csv  eval_summary_by_type.csv  modified_traces_20250716_144647.csv  queries.csv  traces.csv
prompts/: system.md  system_cot.md
utils/: data_prep.py  gen_data.py  tool_calling.py  tools.py  tools.yaml
